    - Pluggable file handlers (not exposed yet in Exempi)
    - Support for Exif 2.3 properties
    - New RIFF file handler
    - Better Postscript support.
    - Lot of bug fixes.
- New API: added XMP_OPEN_OPTIMIZEFILELAYOUT for new SDK.
- Now require (partial) C++11 support to compile (gcc 4.4.7 tested)
- New: WebP format handler (contributed: Frankie Dintino, The Atlantic)

2.3.0 - 2016/03/15

- New: API xmp_datetime_compare().
- New: API xmp_string_len() to get the length of the XmpString.
- Bug #94065:
  - New: API xmp_files_can_put_xmp_xmpstring() and xmp_files_can_put_xmp_cstr()
    variants.
  - New: API xmp_files_put_xmp_xmpstring() and xmp_files_put_xmp_cstr()
    variants.
  - New: API xmp_files_get_xmp_xmpstring() variant.
  - Test: check the status of the PDF handler.
- Bug #90380: Fix potential crash with corrupt TIFF file.
- Bug #14612: Better Solaris compilation fix.
- Fix header to pass -Wstrict-prototypes

2.2.2 - 2014/08/31

- Public header cleanup and documentation update.
- Update Doxygen config.
- Bug #73058: Add missing include for MacOS.
- Bug #72810: Fix typo in date test in MP3 handler.
- Bug #83313: Fix crash on invalid Exif (from Samsung)
- Fix valgrind testing for xmpcore.sh
- Fix delete / delete[] mismatch in ID3_Support.hpp

2.2.1 - 2013/06/29

- Bug #54011: Use POSIX API for files on MacOS. (Misty De Meo)
- Bug #58175: Replace OS X FlatCarbon headers. (Misty De Meo)
- Added a manpage for exempi(1).
- Added the -n option to the command line for arbitrary namespaces.

2.2.0 - 2012/02/21

- New 'exempi' command line tool.
- Upgrade XMPCore to Adobe XMP 5.1.2
  - Quicktime support now works without Quicktime.
  - Reconciliation with ID3v2.
  - "Blessed" 64-bits support (we already had it in exempi).
  - Slight change in the way XMP are written for MWG compliance.
  - Fixed a serious bug with RIFF.
  - Change in the way local text encoding is dealt with.
  - Alternative languages behave slightly differently by changing